Switch to forge kube, fix java version crash